# scitex-db

./: .env.example  .envrc  .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
src/scitex_db/: README.md  __init__.py  __main__.py  _linter_plugin.py
src/scitex_db/_observers/: __init__.py
src/scitex_db/_skills/scitex-db/: 03_python-api.md  10_cli-reference.md  11_quick-start.md  12_python-api.md
src/scitex_db/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_db/_sphinx_html/.doctrees/: environment.pickle
src/scitex_db/_sphinx_html/.doctrees/api/: scitex_db.doctree
src/scitex_db/_sphinx_html/_modules/: index.html
src/scitex_db/_sphinx_html/_modules/scitex_db/: _check_health.html  _delete_duplicates.html  _inspect.html
src/scitex_db/_sphinx_html/_modules/scitex_db/_sqlite3/: _SQLite3.html  _delete_duplicates.html
src/scitex_db/_sphinx_html/api/: scitex_db.html
src/scitex_db/_sqlite3/: _SQLite3.py  _delete_duplicates.py
src/scitex_db/_sqlite3/_SQLite3Mixins/: _ConnectionMixin.py  _QueryMixin.py  _RowMixin.py
tests/: conftest.py
tests/_postgresql/_PostgreSQLMixins/: test__MaintenanceMixin.py  test__QueryMixin.py  test__TableMixin.py
tests/develop/: test_audit.py  test_skills_quality.py
tests/examples/: test_01_basic.py
tests/integration/: test_cross_package_imports.py
tests/scitex_db/: test___main__.py  test__inspect.py  test__linter_plugin.py
tests/scitex_db/_BaseMixins/: test__BaseConnectionMixin.py
tests/scitex_db/_observers/: test__observers.py
tests/scitex_db/_postgresql/_PostgreSQLMixins/: test__BatchMixin.py  test__SchemaMixin.py
tests/scitex_db/_sqlite3/: test__SQLite3.py  test__delete_duplicates.py
tests/scitex_db/_sqlite3/_SQLite3Mixins/: test__BlobMixin.py
