[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-db"
version = "0.1.12"
description = "Database utilities for scientific computing with SQLite3 and PostgreSQL"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "database",
    "sqlite3",
    "postgresql",
    "scientific-computing",
    "numpy-arrays",
    "data-storage"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "click>=8.0",
    "numpy",
    "pandas",
    "scitex-core>=0.1.0",
]

[project.optional-dependencies]
git = [
    "GitPython",
]
postgresql = [
    "psycopg2-binary",
    "sqlalchemy",
]
dev = [
    "scitex-dev>=0.11.7",
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.5.0",
    "coverage>=7.0",            # tests/conftest.py subprocess-coverage shim
    "psycopg2-binary",          # tests/**/_postgresql/test_*.py
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-db[git]",
    "scitex-db[postgresql]",
]

[project.scripts]
scitex-db = "scitex_db.__main__:main"

[project.entry-points."scitex_dev.docs"]
scitex-db = "scitex_db"

[project.entry-points."scitex_dev.skills"]
scitex-db = "scitex_db"

[project.entry-points."scitex_dev.linter.plugins"]
db = "scitex_db._linter_plugin:get_plugin"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-db"
Repository = "https://github.com/ywatanabe1989/scitex-db.git"
Issues = "https://github.com/ywatanabe1989/scitex-db/issues"
Documentation = "https://scitex-db.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=scitex_db --cov-report=term-missing"

[tool.coverage.run]
parallel = true
source = ["scitex_db"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]

dependencies = [
    "scitex-dev>=0.17.8",
]
